--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "nuxt": "^3.15.1",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.12.2",
+    "typescript": "^5.7.2",
+    "vue-tsc": "^2.1.10"
   }
 }
