--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
+    "lint": "eslint --ext .ts,.js,.vue .",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
@@ -15,7 +16,9 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/tailwindcss": "^6.12.2",
+    "eslint": "^8.57.1",
     "typescript": "^5.7.2",
     "vue-tsc": "^2.1.10"
   }
