--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "nuxt": "^3.15.1",
+    "nuxt-swiper": "^2.0.0",
     "vue": "latest",
     "vue-router": "latest"
   },
@@ -21,6 +22,7 @@
     "eslint": "^8.57.1",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
+    "sass": "^1.70.0",
     "typescript": "^5.7.2",
     "vue-tsc": "^2.1.10"
   }
