--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "nuxt": "^3.15.1",
     "nuxt-swiper": "^2.0.0",
     "vue": "latest",
