--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "eslint": "^8.57.1",
+    "nuxt-aos": "^1.2.5",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "sass": "^1.70.0",
