--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "lint": "eslint --ext .ts,.js,.vue .",
     "postinstall": "nuxt prepare"
   },
+  "overrides": {
+   "vue": "latest"
+  },
   "dependencies": {
+    "@pinia/nuxt": "^0.5.0",
     "aos": "^3.0.0-beta.6",
     "nuxt": "^3.15.1",
     "nuxt-swiper": "^2.0.0",
+    "pinia": "^2.3.0",
     "vue": "latest",
     "vue-router": "latest"
   },
