--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "deploy":"gh-pages --dotfiles -d .output/public",
+    "deploy": "gh-pages --dotfiles -d .output/public",
     "lint": "eslint --ext .ts,.js,.vue .",
     "postinstall": "nuxt prepare"
   },
@@ -29,6 +29,7 @@
     "eslint": "^8.57.1",
     "gh-pages": "^6.3.0",
     "nuxt-aos": "^1.2.5",
+    "nuxt-lodash": "^2.5.3",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "sass": "^1.70.0",
