--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.0",
+    "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
     "nuxt": "^3.15.1",
     "nuxt-swiper": "^2.0.0",
